Calendar day functionalities done

--- a/FINAL PROJECT/FINAL PROJECT.csproj
+++ b/FINAL PROJECT/FINAL PROJECT.csproj
@@ -215,6 +215,12 @@
     <Compile Include="TaskBar.Designer.cs">
       <DependentUpon>TaskBar.cs</DependentUpon>
     </Compile>
+    <Compile Include="TaskDaily.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TaskDaily.Designer.cs">
+      <DependentUpon>TaskDaily.cs</DependentUpon>
+    </Compile>
     <Compile Include="TempStorage.cs" />
     <Compile Include="UCWeekBlank.cs">
       <SubType>UserControl</SubType>
@@ -295,6 +301,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="TaskBar.resx">
       <DependentUpon>TaskBar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TaskDaily.resx">
+      <DependentUpon>TaskDaily.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UCWeekBlank.resx">
       <DependentUpon>UCWeekBlank.cs</DependentUpon>
@@ -525,6 +534,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\ICON_Trash %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\EnlargedNewTimeLineForWolf.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
